# learn-pyspark-1

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_SUMMARY.md  README.md  WELCOME.txt  convert_to_notebooks.py  log4j.properties  log4j2.properties  pyproject.toml  requirements.txt  run_all_jobs.py  start_jupyter.py  verify_environment.py  verify_setup.py
.github/workflows/: quality.yml
docs/: CHEATSHEET.md  CODE_QUALITY.md  ENVIRONMENT_SETUP.md  LEARNING_FLOW.md  QUICKSTART.md  TROUBLESHOOTING.md  UPDATE_SUMMARY.md  concepts.md
jobs/: 01_dataframe_basics.py  02_aggregations.py  03_joins.py  04_analytics_udfs.py  05_search_indexing.py
notebooks/: 01_dataframe_basics.ipynb  02_aggregations.ipynb  03_joins.ipynb  04_analytics_udfs.ipynb  05_search_indexing.ipynb  README.md
utils/: __init__.py  data_generator.py  spark_session.py
